added rspec and cumber gems.

--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,9 @@ development:
   database: wordcity_development
   host: localhost
 
-test:
+test: &test
   adapter: postgresql
   database: wordcity_test
   host: localhost
+cucumber:
+  <<: *test
